Fix UI overflow bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@ html {
 * {
   box-sizing: border-box;
 }
-body {
+html {
   background-image: url("/wave-background.svg");
   background-repeat: no-repeat;
   background-position: center;
